# spec-driven-hackthon-II-phase-01

./: .gitignore  CLAUDE.md  README.md  package-lock.json  pyproject.toml  requirements.txt  test_persistence.py
.specify/memory/: constitution.md
history/prompts/001-basic-todo-crud/: 1-create-plan.plan.prompt.md  1-create-spec.spec.prompt.md  1-create-tasks.tasks.prompt.md  1-implement-app.implementation.prompt.md
history/prompts/constitution/: 1-create-todo-constitution.constitution.prompt.md
specs/001-basic-todo-crud/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-basic-todo-crud/checklists/: requirements.md
specs/001-basic-todo-crud/contracts/: task-api-contract.md
src/cli/: app.py  ui.py
src/models/: errors.py  storage.py  task.py  task_list.py
src/services/: database_service.py  in_memory_storage.py  sqlite_storage.py  task_service.py
tests/unit/: test_task_service.py
